# agent-chain

./: .gitignore  README.md  pyproject.toml
agent_chain/: __main__.py  baby_agi.py  factories.py  plan_and_execute.py  tools_prompt_template.py
agent_chain/tools/: __init__.py  auto_gpt.py  file_tools.py  llm_tool.py  serp_api.py  sparql_tool.py  todo.py  wikipedia.py
objectives/: lobster-fishing.txt  lobster-fishing2.txt
